fix menu on mobile

--- a/src/scss/common/header.scss
+++ b/src/scss/common/header.scss
@@ -226,7 +226,6 @@
             background-color: $white;
             padding: 25px;
             width: 100%;
-            height: fit-content;
             transform: translate(120%, 0);
 
             transition: all 0.3s ease 0s;
@@ -385,7 +384,6 @@
         }
 
         @media (max-width: 1024px) {
-            height: 100%;
             overflow-y: auto;
             flex-direction: column;
             display: flex;
